# agent-change-intelligence-research

./: AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
landscape/: inclusion_criteria.md  projects.csv
src/changeintel/: __init__.py  api.py  cli.py  git_diff.py  models.py  symbols.py
studies/: benchmark_design.md  validate_datasets.py
taxonomy/: metrics_dictionary.csv  telemetry_schema.md  use_case_matrix.csv
tests/: test_git_diff.py  test_integration.py  test_symbols.py
